# advent-of-code

./: .gitignore  README.md  judge.sh  tags
.cargo/: config.toml
1/: part1.py  part2.py
2/: part1.py  part2.py
2019/1/: solver.py
2019/2/: solver.py
2019/3/: faster_solver.py  solver.py
3/: part1.py  part2.py
4/: part1.py
5/: part1.py  part2.py
6/: part1.py  render.txt
aoc2019/day4/: solver.py  test.py
aoc2019/day5/: Cargo.toml  solver.py
aoc2019/day6/: solver.py  test.py
aoc2019/day8/: solver.py  test.py
aoc2019py/day1/: solver.py  test.py
aoc2019py/day2/: solver.py  test.py
aoc2019py/day3/: day3_fast.py  solver.py  test.py
aoc2019py/day4/: solver.py  test.py
aoc2020/: .gitignore  Cargo.toml  README.md
aoc2020/src/: day1.py  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  input.rs  lib.rs  main.rs
aoc2021/: .projections.json  Cargo.toml
aoc2021/src/: bits.rs  compressed_field.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day16.rs  day17.rs  day2.rs  day20.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  field2d.rs  lib.rs  main.rs
aoc2021/src/bits/: main.rs  mod.rs
aoc2022/: .projections.json  Cargo.toml
aoc2022/proptest-regressions/: day25.txt
aoc2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  (+25 more)
aoc2023/: Cargo.toml
aoc2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day07.rs  day08.rs  day09.rs  day11.rs  day12.rs  day14.rs  lib.rs
aoc2024/: .gitignore  Cargo.toml  Justfile  day_template.rs.j2
aoc2025/: Cargo.toml
aoc_helpers/: Cargo.toml
hooks/: pre-push
(+40 files in other folders)
