[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.12.0"
ndarray = "0.15.6"
nom = "7.1.3"
rayon = { version = "1.8.0", optional = true }

[dev-dependencies]
test-case = "3.3.1"

[features]
default = ["rayon"]
rayon = ["dep:rayon", "ndarray/rayon"]
